[package]
name = "diskon-regional"
version = "0.1.0"
authors = ["Adityo Pratomo <adityo@tetrate.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
